tests/ui/skip_flatten.stderr
error: proc-macro derive panicked
  --> $DIR/skip_flatten.rs:11:10
   |
11 | #[derive(StructOpt)]
   |          ^^^^^^^^^
   |
   = help: message: subcommand, flatten and skip cannot be used together
